🐛 fix: corrigindo projeto

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Favicon -->
-  <link rel="shortcut icon" href="./assets/logo.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
   <!-- CSS -->
   <link rel="stylesheet" href="./css/style.css">
   <!-- Font Awesone -->
@@ -13,11 +14,23 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-  <title>Curso Alura | Bruno H</title>
+  <title>Curso Alura | Bruno Dórea</title>
+  <!-- GOOGLE ANALYTICS -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TJQ2XJZPTD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+    gtag("config", "G-TJQ2XJZPTD");
+  </script>
 </head>
+
 <body>
   <input type="text" placeholder="Digite um numero">
   <button>Compare com o meu segredo</button>
 </body>
 <script src="./js/script.js"></script>
+
 </html>
